--- a/Source/BulkBillCopy/BulkBillCopy.csproj
+++ b/Source/BulkBillCopy/BulkBillCopy.csproj
@@ -24,21 +24,27 @@
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
-        <DebugType>pdbonly</DebugType>
+        <DebugType>none</DebugType>
         <Optimize>true</Optimize>
-        <OutputPath>bin\Release\</OutputPath>
+        <OutputPath>..\..\Assemblies\</OutputPath>
         <DefineConstants>TRACE</DefineConstants>
         <ErrorReport>prompt</ErrorReport>
-        <WarningLevel>4</WarningLevel>
+        <WarningLevel>0</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="0Harmony, Version=2.1.1.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>E:\Tools\Modding\Harmony\Lib.Harmony.2.1.1\lib\net472\0Harmony.dll</HintPath>
           <Private>False</Private>
         </Reference>
-        <Reference Include="Assembly-CSharp, Version=1.3.7922.20075, Culture=neutral, PublicKeyToken=null">
+        <Reference Include="Assembly-CSharp, Version=1.3.7964.22648, Culture=neutral, PublicKeyToken=null">
           <HintPath>..\..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
           <Private>False</Private>
+        </Reference>
+        <Reference Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' " Include="dnlib, Version=3.3.2.0, Culture=neutral, PublicKeyToken=50e96378b6e77999">
+          <HintPath>..\..\..\..\..\..\..\..\..\Users\Joshua\Downloads\HotSwap_13\HotSwap\Assemblies\dnlib.dll</HintPath>
+        </Reference>
+        <Reference Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' " Include="HotSwap, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\..\..\..\..\..\..\..\Users\Joshua\Downloads\HotSwap_13\HotSwap\Assemblies\HotSwap.dll</HintPath>
         </Reference>
         <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>..\..\..\..\RimWorldWin64_Data\Managed\UnityEngine.dll</HintPath>
